# stocktrader

./: .gitignore  Dockerfile  README.md  data_pipeline.py  entrypoint.sh  llm.py  logtest.py  market_analytics.py  pyproject.toml  requirements.txt  s3_data_pipeline.py  setup_environment.py  supervisord.conf  task-definition.json  unit_test.py
aws/: task-definition.json
containers/: Dockerfile  Dockerfile_S3  build.sh  elastic-agent-template.yml  entrypoint_s3.sh  manage.py  run.sh
containers/tmp/: llm.py  llm_test.py  market_analytics.py  s3_data_pipeline.py  setup_environment.py
dashboards/: dashboard-export-08142024.ndjson  dashboard-export-08162024.ndjson  dashboard-export.ndjson
data/: ticker_analytics-08-14-2024.jsonl  ticker_analytics-08-15-2024.jsonl  ticker_analytics-09-11-2024.jsonl  ticker_watchlist-08-15-2024.jsonl  ticker_watchlist-09-11-2024.jsonl
dsl/: api_keys.es  queries.es  ticker_analytics.es  ticker_by_minute.es  ticker_llm_metrics.es  ticker_watchlist.es
notebooks/: playground.ipynb
