
[tool.poetry]
name = "stockpicker"
version = "0.1.0"
description = ""
authors = ["cfossguy <cfossguy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
logfmter = "^0.0.6"
python-dotenv = "^0.21.0"
polygon-api-client = "^1.13.7"
pandarallel = "^1.6.4"
yfinance= "^0.2.36"
pandas = "^2.2.2"
numpy = "^2.0.0"
openai = "^1.35.3"
retrying = "^1.3.4"
elasticsearch = "^8.14.0"
typer = "^0.12.3"
boto3 = "^1.34.157"
setuptools = "^72.1.0"
ecs-logging = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
